# BCEmbedding

./: pyproject.toml  setup.py
.github/workflows/: build-wheel.yml
