[project]
name = "BCEmbedding"
version = "0.1.5.1"
license = { text = "Apache-2.0" }
description = "A text embedding model and reranking model produced by Netease Youdao Inc., which can be used for dense embedding retrieval and reranking in RAG workflow."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Netease Youdao, Inc.", email = "shenlei02@corp.netease.com" }
]
urls = { homepage = "https://gitlab.corp.youdao.com/ai/BCEmbedding" }
dependencies = [
    "torch>=1.6.0",
    "transformers>=4.35.0,<5.0.0",
    "datasets",
    "sentence-transformers",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["*"] } }